# LasMarionetas

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ts2comdirectors.txt
cmake/: ClangFormat.cmake  CurrentFunction.cmake  GitWatcher.cmake
patch/: README.md
src/: CMakeLists.txt
src/allocator/: CMakeLists.txt  allocmutex_posix.cpp  allocmutex_win32.cpp  generalalloc.cpp
src/allocator/include/allocator/: allocmutex.h  generalalloc.h
src/charactereditor/: CMakeLists.txt  dllmain.cpp  hookedfuncs.cpp
src/citygame/: CMakeLists.txt  dllmain.cpp  hookedfuncs.cpp
src/codex/: CMakeLists.txt
src/codex/include/: codex.h
src/codex/src/: refpack.c
src/common/: CMakeLists.txt  gitinfo.h
src/common/gz/: igzbuffer.h  igzcom.h  igzcomdirector.h  igzcriticalsection.h  igzfilesystem.h  igzframeworkhooks.h  igzframeworkw32.h  igzgraphicsystem.h  igzmessageserver.h  igzostream.h  igzpersistdbrecord.h  igzpersistresource.h  igzserializable.h  igzunknown.h  igzunknownenum.h
src/common/hooks/: hooker.h
src/common/rz/: rzcmdline.cpp  rzcmdline.h  rzcomdlldirector.cpp  rzcriticalsection.h  rzcriticalsection_posix.cpp  rzdate.cpp  rzfastalloc.h  rzrandom.cpp  rzrandomsuper.cpp  rzrandomsuper.h  rzstring.cpp  rzstring.h  rztime.cpp  rztime.h
src/compat/: CMakeLists.txt  aliasing.h  endianness.h  rotate.h  string.c  string.h.in  time.c  time.h.in
src/compat/compat/: aliasing.h  callconv.h  cpuid.h  endianness.h  rotate.h
src/compat/dirent/: dirent.c  dirent.h
src/compat/dlfcn/: dlfcn.c  dlfcn.h
src/compat/fnmatch/: fnmatch.c
src/compat/libgen/: libgen.c
src/compat/stdbool/: stdbool.h
src/compat/stdint/: inttypes.h  stdint.h
src/compat/unistd/: unistd.c  unistd.h
src/editor/: CMakeLists.txt  dllmain.cpp  hookedfuncs.cpp
src/framework/: CMakeLists.txt  gimexstd.cpp  gitinfo.c.in  unichar.h
src/framework/gz/: gzclsid.h  gzcom.cpp  gzcom.h  gzcomlibrary.cpp  gzcomlibrary.h  gzframework.cpp  gzframework.h  igzapp.h  igzcmdline.h  igzcom.h  igzcomdirector.h  igzcomlibrary.h  igzcompressor.h  igzcursor.h  igzcursormanager.h  igzcursorresource.h  igzcursorresourcefactory.h  igzexceptionnotification.h  igzfile.h  igzframework.h  igzframeworkhooks.h  igzframeworkw32.h  igzgraphicsystem.h  igzistream.h  igzkeyboard.h  igzmessageserver.h  igzmessagetarget.h  igzmessagetarget2.h  igzostream.h  igzpersistbufferresource.h  igzpersistdbrecord.h  igzpersistdbsegment.h  igzpersistdbsegmentdirectoryfiles.h  igzpersistdbserialrecord.h  igzpersistresource.h  igzpersistresourcefactory.h  igzpersistresourcekeyfilter.h  igzserializable.h  igzstring.h  igzsystemservice.h  (+3 more)
src/framework/hooks/: gzhookedfuncs.cpp  hooker.h
src/framework/rz/: convertstring.cpp  convertstring.h  rzapppath.h  rzapppath_posix.cpp  rzapppath_win32.cpp  rzautorefcount.h  rzcmdline.cpp  rzcmdline.h  rzcomdlldirector.cpp  rzcomdlldirector.h  rzcriticalsection_win32.cpp  rzdate.h  rzfastalloc.cpp  rzistream.cpp  rzistream.h  rzlocale.cpp  rzlocale.h  rzostream.cpp  rzostream.h  rzrandom.cpp  rzrandom.h  rzrandomsuper.cpp  rzrandomsuper.h  rzrect.h  rzsleep.h  rzstring.cpp  rzstring.h  rzsysservptr.h  rzsystemservice.cpp  rzsystemservice.h  rzthreadsafe.cpp  rzthreadsafe.h  rzthreadsafeobject.h  rztime.h  rztimer.cpp  rztimer.h  rzunknownmt.cpp  rzunknownmt.h  rzversion.cpp  rzversion.h
src/game/: CMakeLists.txt  dllmain.cpp  hookedfuncs.cpp
src/gimex/: CMakeLists.txt
src/gimex/include/: gimex.h
src/gimex/src/: bitmap.h  bitmapgimex.c  bitmapgimex.h  gfuncs.c  gfuncs.h  gimex.c  gimexconv.c  jpeggimex.c  jpeggimex.h  jpegio.c  jpegio.h  nullgimex.c  nullgimex.h  pnggimex.c  pnggimex.h  shapefile.c  shapefile.h  shpgimex.c  shpgimex.h  targa.h  targagimex.c  targagimex.h
src/hookproxy/: CMakeLists.txt  hasher.cpp  hooker.cpp  hooker.h  mapview.cpp  mapview.h  proxydll.cpp  sha1.cpp  sha1.h
src/houseeditor/: CMakeLists.txt  dllmain.cpp  hookedfuncs.cpp
src/miniposix/: CMakeLists.txt
src/miniposix/dirent/: dirent.c  dirent.h
src/miniposix/dlfcn/: dlfcn.h
src/miniposix/fnmatch/: fnmatch.h
src/miniposix/getopt/: getopt.h
src/miniposix/libgen/: libgen.c
src/miniposix/systime/: time.c
src/miniposix/systime/sys/: time.h
src/miniposix/unistd/: unistd.c  unistd.h
src/pkginstall/: CMakeLists.txt  dllmain.cpp  hookedfuncs.cpp
src/ploteditor/: CMakeLists.txt  dllmain.cpp  hookedfuncs.cpp
src/plugin/: CMakeLists.txt  plugindirector.cpp
src/testgen/: CMakeLists.txt  dllmain.cpp  genconvertstring.cpp  genconvertstring.h  genrandom.cpp  genrandom.h  hookedfuncs.cpp  main.cpp
tests/: CMakeLists.txt  test_codex.cpp  test_common.h  test_convertstring.cpp  test_locale.cpp  test_rzcmdline.cpp  test_rzrandom.cpp  test_rztimer.cpp  test_rzversion.cpp  testcmdline.cpp
